@@ -1,5 +1,11 @@
 2003-09-04	Joel Sherrill <joel@OARcorp.com>
 
+	* clock/clock.c, console/debugio.c, include/dmv170.h,
+	startup/bspclean.c, startup/genpvec.c, startup/setvec.c,
+	startup/vmeintr.c, timer/timer.c: URL for license changed.
+
+2003-09-04	Joel Sherrill <joel@OARcorp.com>
+
 	* console/conscfg.c, include/bsp.h, scv64/scv64.c, startup/bspstart.c,
 	tod/todcfg.c: Removed incorrect statement about copyright assignment.
 
